--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
-<h1>HELLO</h1>
-</body>
+<div data-role="page">
+    <div data-role="header" data-theme='b'>
+      <h1>LOL</h1>
+    </div>
+    <div data-role="content" data-theme='c'>
+      <p>XDDDDDDDDDDDDDDDDDDDDDDDDDDdd</p>
+      <a href="gaidys.html" data-role="button">MEILE</a>
+    </div>
+</div>>
 </html>
