--- a/gaidys.html
+++ b/gaidys.html
@@ -2,6 +2,18 @@
 <head>
 </head>
 <body>
-<img src="1.jpg" alt="Mountain View" style="width:400px;height:400px;"><img src="3.png" alt="Mountain View" style="width:400px;height:400px;"><img src="2.jpg" alt="Mountain View" style="width:300px;height:400px;">    
+<div data-role="page" background-color='#99FF00'>
+    <div data-role="header" data-theme='b'>
+      <h1>Colorie Counter</h1>
+    </div>
+    <div data-role="content" data-theme='c'>
+<form>
+     <label for="text-1">Username:</label>
+     <input data-clear-btn="true" name="text-1" id="text-1" value="" type="text">
+     <label for="text-2">Password:</label>
+     <input data-clear-btn="true" name="text-2" id="text-2" value="" type="text">
+	 <label for="text-3">Repeat Password:</label>
+	 <input data-clear-btn="true" name="text-3" id="text-3" value="" type="text">
+</form>
 </body>
 </html>
