--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="style.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css"/>
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"/>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"/>
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
 <style>
@@ -19,9 +19,9 @@
     <div data-role="content" data-theme='c'>
 <form>
      <label for="text-1">Username:</label>
-     <input data-clear-btn="true" name="text-1" id="text-1" value="" type="text">
+     <input data-clear-btn="true" name="text-1" id="text-1" value="" type="text"/>
      <label for="text-3">Password:</label>
-     <input data-clear-btn="true" name="text-3" id="text-2" value="" type="text">
+     <input data-clear-btn="true" name="text-3" id="text-2" value="" type="text"/>
 </form>
 <center><button class="ui-btn ui-btn-inline">Submit</button></center>
 <br></br>
